src/main/java/com/example/friendsletter/errors/USER_ERRORS.java
package com.example.friendsletter.errors;

public enum USER_ERRORS {
    EMAIL_ALREADY_REGISTERED,
    USERNAME_ALREADY_REGISTERED,
    USER_NOT_FOUND


}
